线程问题验证