@@ -8,6 +8,7 @@
         <module>datastructure</module>
         <module>agent</module>
         <module>agent-test</module>
+        <module>faultlocation</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -75,7 +76,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--add-opens java.base/jdk.internal.util=ALL-UNNAMED</argLine>
+                    <argLine></argLine>
                 </configuration>
             </plugin>
         </plugins>
